--- a/res/layout/filtershow_activity.xml
+++ b/res/layout/filtershow_activity.xml
@@ -18,8 +18,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/mainView"
-    android:background="@color/background_screen" >
+    android:id="@+id/mainView">
 
     <LinearLayout
         android:id="@+id/imageStatePanel"
