--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -29,8 +29,7 @@
         <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
     <style name="Theme.FilterShow" parent="Theme.Gallery">
-        <item name="android:windowBackground">@null</item>
-        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@color/background_screen</item>
     </style>
     <style name="Holo.ActionBar" parent="android:Widget.Holo.ActionBar">
         <item name="android:displayOptions">useLogo|showHome</item>
