Fix transparency issue under the spinner.
bug:7634701
Change-Id: I907ebbb373958350b1b17dc86723e430441a01dd

--- a/res/layout/filtershow_activity.xml
+++ b/res/layout/filtershow_activity.xml
@@ -148,7 +148,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:indeterminate="true"
-                android:indeterminateOnly="true" />
+                android:indeterminateOnly="true"
+                android:background="@color/background_screen" />
 
         </FrameLayout>
 
